--- a/web_page.html
+++ b/web_page.html
@@ -99,7 +99,7 @@
     <div class="collapse navbar-collapse" id="agriNavbar">
       <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
         <li class="nav-item">
-          <a class="nav-link active" aria-current="page" href="index.html"
+          <a class="nav-link active" aria-current="page" href="web_page.html"
             >Home</a
           >
         </li>
@@ -569,4 +569,5 @@ as: {
       });
   </script>
 </body>
+
 </html>
